Install MonoFramework Mac via travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ mono: latest
 os: osx
 osx_image: xcode9.2
 
+env:
+  global:
+    - MONO_VERSION=5.16.0.220
+
+install:
+  - wget "http://download.mono-project.com/archive/${MONO_VERSION}/macos-10-universal/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.universal.pkg"
+  - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.universal.pkg" -target /
+
 script:
-  - nuget restore
-  - msbuild
+  - /Library/Frameworks/Mono.framework/Commands/nuget restore
+  - /Library/Frameworks/Mono.framework/Commands/xbuild
